Improved cache and fixed shuffle mode